@@ -2,6 +2,15 @@
 	    Alan Hayward  <alan.hayward@arm.com>
 	    David Sherwood  <david.sherwood@arm.com>
 
+	* combine.c (extract_left_shift): Add a mode argument and update
+	recursive calls.
+	(make_compound_operation_int): Change the type of the mode parameter
+	to scalar_int_mode and update the call to extract_left_shift.
+
+2017-08-30  Richard Sandiford  <richard.sandiford@linaro.org>
+	    Alan Hayward  <alan.hayward@arm.com>
+	    David Sherwood  <david.sherwood@arm.com>
+
 	* combine.c (simplify_and_const_int): Change the type of the mode
 	parameter to scalar_int_mode.
 	(simplify_and_const_int_1): Likewise.  Update recursive call.
